package de.uni_jena.fpp.chatroom;

/**
 * Einfache User-Datenklasse.
 * Für Meilenstein 1 reicht Klartext-Passwort.
 */
public class User {

    private final String username;
    private final String password;

    public User(String username, String password) {
        this.username = username;
        this.password = password;
    }

    public String getUsername() {
        return username;
    }

    public String getPassword() {
        return password;
    }
}
